--- a/google_login_using_firebase/build.gradle
+++ b/google_login_using_firebase/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     //this is added when we integrated firebase
-    implementation 'com.goo.android.gms:play-services-auth:18.0.0'
-    implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:18.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
